--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
   },
   "dependencies": {
     "@react-three/fiber": "^9.4.0",
+    "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
     "motion": "^12.23.24",
     "ogl": "^1.0.11",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-icons": "^5.5.0",
+    "react-intersection-observer": "^10.0.0",
     "react-router-dom": "^7.9.5",
+    "react-slick": "^0.31.0",
+    "slick-carousel": "^1.8.1",
     "three": "^0.181.2"
   },
   "devDependencies": {
